--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="header">
-  <h1>akan</h1>
+  <h1>AKAN NAMING SYSTEM</h1>
 </div>
 <div class="topic">
   <P>The Akan people of Ghana frequently name 
